src/main/java/com/example/consultorio_medico_api/utils/error/ErrorBs.java
package com.example.consultorio_medico_api.utils.error;

public interface ErrorBs {
    String getCode();
    String getMessage();
}
